--- a/ReadingTracker/ReadingTracker.csproj
+++ b/ReadingTracker/ReadingTracker.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -18,6 +18,11 @@
 
   <ItemGroup>
     <Folder Include="DemoGifs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ReadingTracker.Data\ReadingTracker.Data.csproj" />
+    <ProjectReference Include="..\ReadingTracker.Domain\ReadingTracker.Domain.csproj" />
   </ItemGroup>
 
 </Project>
