--- a/ReadingTracker/ReadingTracker.csproj
+++ b/ReadingTracker/ReadingTracker.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -17,7 +17,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\" />
     <Folder Include="DemoGifs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ReadingTracker.DataAccess\ReadingTracker.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
